Download support for uploads (#2832)
* Add endpoint to get a scene's images with downloadable URIs
* Update front-end to use image `downloadUri`
* Fix string interpolation in `getDownloadUrl` method
* Move image download fetching logic to download modal
